--- a/kube-deploy.yaml
+++ b/kube-deploy.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: core-web
-        image: chzbrgr71/core-web:kube
+        image: chzbrgr71/core-web:kube9
         env:
         - name: BACKEND_IP
           value: "10.0.176.131"
@@ -64,6 +64,6 @@ spec:
     spec:
       containers:
       - name: core-api
-        image: chzbrgr71/core-api:kube
+        image: chzbrgr71/core-api:kube9
         ports:
           - containerPort: 5001
