--- a/kube-deploy.yaml
+++ b/kube-deploy.yaml
@@ -26,12 +26,14 @@ spec:
     spec:
       containers:
       - name: core-web
-        image: chzbrgr71/core-web:kube9
+        image: chzbrgr71/core-web
         env:
         - name: BACKEND_IP
           value: "10.0.176.131"
         - name: BACKEND_PORT
           value: "8080"
+        - name: ORCHESTRATOR
+          value: "Kubernetes"
         ports:
           - containerPort: 5000
 ---
@@ -64,6 +66,6 @@ spec:
     spec:
       containers:
       - name: core-api
-        image: chzbrgr71/core-api:kube9
+        image: chzbrgr71/core-api
         ports:
           - containerPort: 5001
