--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
 
   core-api:
-    image: chzbrgr71/core-api:swarm
+    image: chzbrgr71/core-api
     links:
       - core-web
     ports:
@@ -12,7 +12,7 @@ services:
       replicas: 4
 
   core-web:
-    image: chzbrgr71/core-web:swarm
+    image: chzbrgr71/core-web
     ports:
      - 80:5000
     environment:
