--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,16 @@ version: "3"
 
 services:
 
-  core-api:
+  api:
     image: chzbrgr71/core-api
     links:
       - core-web
     ports:
       - 5001:5001
     deploy:
-      replicas: 4
+      replicas: 3
 
-  core-web:
+  web:
     image: chzbrgr71/core-web
     ports:
      - 80:5000
