--- a/kube-deploy.yaml
+++ b/kube-deploy.yaml
@@ -1,6 +1,21 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: core-api
+  labels:
+    app: core-api
+spec:
+  type: ClusterIP
+  ports:
+  - port: 8080
+    targetPort: 5001
+  clusterIP: 10.0.176.131
+  selector:
+    run: core-api
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: core-web
   labels:
     app: core-web
@@ -11,6 +26,26 @@ spec:
     targetPort: 5000
   selector:
     run: core-web
+---
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: core-api
+spec:
+  replicas: 4
+  template:
+    metadata:
+      labels:
+        run: core-api
+        app: core-api
+    spec:
+      containers:
+      - name: core-api
+        image: briarregistry-microsoft.azurecr.io/chzbrgr71/core-api
+        ports:
+          - containerPort: 5001
+      imagePullSecrets:
+        - name: myregistrykey
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -36,36 +71,3 @@ spec:
           value: "Kubernetes"
         ports:
           - containerPort: 5000
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: core-api
-  labels:
-    app: core-api
-spec:
-  type: ClusterIP
-  ports:
-  - port: 8080
-    targetPort: 5001
-  clusterIP: 10.0.176.131
-  selector:
-    run: core-api
----
-apiVersion: extensions/v1beta1
-kind: Deployment
-metadata:
-  name: core-api
-spec:
-  replicas: 4
-  template:
-    metadata:
-      labels:
-        run: core-api
-        app: core-api
-    spec:
-      containers:
-      - name: core-api
-        image: chzbrgr71/core-api
-        ports:
-          - containerPort: 5001
