--- a/kube-deploy-web-acr.yaml
+++ b/kube-deploy-web-acr.yaml
@@ -29,7 +29,7 @@ spec:
         image: briarregistry-microsoft.azurecr.io/chzbrgr71/core-web
         env:
         - name: BACKEND_IP
-          value: "10.0.176.131"
+          value: "core-api.default.svc.cluster.local"
         - name: BACKEND_PORT
           value: "8080"
         - name: ORCHESTRATOR
